fix branding on small devices

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -104,10 +104,10 @@ body{
 
 @media screen and (max-width: 767px){
   .navbar-brand-subtitle {
-    font-size: 14px;
+    font-size: 12px !important;
   }
   .navbar-default .navbar-brand {
-    font-size: 16px;
+    font-size: 14px;
   }
 
 }
